--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .vscode
 bin
 lib
+UniversityGUI_RomeroLozano/Assignment 4 Description - GUI(1).pdf
+UniversityGUI_RomeroLozano/UniversityGUI_RomeroLozano.zip
